oxiplate-derive/tests/config/expected/unsupported-brace.stderr
error: Failed to parse `/oxiplate.toml`: Expected a string, found: BraceOpen[{]
 --> tests/broken/unsupported-brace.rs:3:10
  |
3 | #[derive(Oxiplate)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `Oxiplate` (in Nightly builds, run with -Z macro-backtrace for more info)
